mp12_microarch_twotier_starter/web_tier/web_tier_deployment.yaml
# Starter Kubernetes Deployment and Service for the Web Tier.
#
# This YAML defines a deployment and service for the web-tier Envoy proxy.
# Students may use this as a base for deploying their web-tier and exposing it via a LoadBalancer.
#
# TODO: Fill in the Kubernetes Deployment and Service spec here.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-tier-deployment
  namespace: web-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-tier-app
  template:
    metadata:
      labels:
        app: web-tier-app
    spec:
      containers:
      - name: web-tier-container
        image: vkadam157/web-tier:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 9901
---
apiVersion: v1
kind: Service
metadata:
  name: web-tier-service
  namespace: web-tier
spec:
  type: LoadBalancer
  selector:
    app: web-tier-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
